# mr-friess-classroom-engine

./: .gitattributes  .gitignore  .npmrc  CONTENT.md  CONTENT_BREAKDOWN.md  CONTRIBUTING.md  DECISIONS.md  ENGINE_1_0_CHECKLIST.md  HANDOFF.md  README.md  README_CURRENT.md  REPO_CLEANUP_PLAN_V1.md  SETUP_STATUS.md  SUPPORT_SCRIPT_REPLACEMENTS.md  TREE_OP_TEST.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.current.toml  pyproject.toml  science9_interconnected_spheres.json
.github/: AGENT_POLICY.md  pull_request_template.md
agents/: daily-implementation-intake.agent.md  phase-implementation.agent.md  qa-cleanup.agent.md
contracts/: classroom-content-contract.md  communication-bridge-v1.md  engine-expansion-contract.md  package-render-contract.md  page-role-contract.md
docs/: AGENT_RUNBOOK.md  BUILDER_NOTES.md  CLASSROOM_ACTIVITY_ENGINE_CONTRACT.md  CODEX_HANDOFF_CONTENT_VOICE.md  CODEX_HANDOFF_HTML_RENDERER.md  CODEX_HANDOFF_PHASE_ROADMAP.md  CODEX_HANDOFF_PPTX_VISUAL_UPGRADE.md  CONTRACT_DRIFT_INVENTORY.md  README.md  WHAT_IS_MISSING.md  WORKLOAD.md  assessment-quiz-render-contract.md  assignment-family-architecture-audit.md  backend-transition-notes.md  ci-probe-repo-tests.md  content-expansion-audit.md  current-repo-status.md  doc-audit-2026-04-12.md  house-workflow.md  legacy-direct-builders.md  lwd-render-proof-trigger-2.md  lwd-render-proof-trigger.md  next-phase-repeatability-plan-v1.md  official-course-load-2026-2027.md  pedagogy-variant-proof.md  pipeline-freeze-v1.md  renderer-dependency-map.md  renderer-transition-plan.md  (+8 more)
(+557 files in other folders)
