[project]
name = "integrated-engine"
version = "0.2.0"
description = "Pinned toolchain baseline for the Mr. Friess classroom engine"
requires-python = ">=3.11"
dependencies = [
  "reportlab>=4.0"
]

[dependency-groups]
dev = [
  "ruff==0.15.6",
  "pytest==9.0.2",
  "pre-commit==4.4.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-q"
